--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
     "glob": "^7.1.2",
     "glob-parent": "^3.1.0",
     "minimist": "^1.2.0"
+  },
+  "bin": {
+    "gzip": "./src/index.js"
   }
 }
