--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.3",
   "description": "gzip files",
   "main": "src/index.js",
-  "scripts": {},
+  "scripts": {
+    "test": "jest --coverage"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/pakhuta/gzip-cli.git"
@@ -26,5 +28,9 @@
   },
   "bin": {
     "gzip": "./src/index.js"
+  },
+  "devDependencies": {
+    "jest": "^23.4.1",
+    "rimraf": "^2.6.2"
   }
 }
