--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gzip-cli",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "description": "gzip files",
   "main": "src/index.js",
   "scripts": {
@@ -22,16 +22,16 @@
   },
   "homepage": "https://github.com/pakhuta/gzip-cli#readme",
   "dependencies": {
-    "glob": "^7.1.2",
-    "glob-parent": "^3.1.0",
-    "minimist": "^1.2.0"
+    "glob": "~7.1.4",
+    "glob-parent": "~5.0.0",
+    "minimist": "~1.2.0"
   },
   "bin": {
     "gzip": "./src/index.js"
   },
   "devDependencies": {
-    "coveralls": "^3.0.2",
-    "jest": "^23.4.1",
-    "rimraf": "^2.6.2"
+    "coveralls": "~3.0.4",
+    "jest": "~24.8.0",
+    "rimraf": "~2.6.3"
   }
 }
