move code base to Typescript

--- a/package.json
+++ b/package.json
@@ -1,10 +1,16 @@
 {
   "name": "gzip-cli",
-  "version": "1.0.4",
+  "version": "1.1.0",
   "description": "gzip files",
-  "main": "src/index.js",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "bin": {
+    "gzip": "dist/index.js"
+  },
   "scripts": {
-    "test": "jest --coverage --coverageReporters=text-lcov | coveralls"
+    "build": "webpack",
+    "test": "jest --coverage --coverageReporters=text-lcov | coveralls",
+    "test:local": "jest"
   },
   "repository": {
     "type": "git",
@@ -22,16 +28,25 @@
   },
   "homepage": "https://github.com/pakhuta/gzip-cli#readme",
   "dependencies": {
-    "glob": "~7.1.4",
-    "glob-parent": "~5.0.0",
-    "minimist": "~1.2.0"
-  },
-  "bin": {
-    "gzip": "./src/index.js"
+    "glob": "^7.1.6",
+    "glob-parent": "^5.1.0",
+    "minimist": "^1.2.0"
   },
   "devDependencies": {
+    "@types/glob": "^7.1.1",
+    "@types/glob-parent": "^5.1.0",
+    "@types/jest": "^24.9.0",
+    "@types/minimist": "^1.2.0",
+    "@types/rimraf": "^2.0.3",
     "coveralls": "~3.0.5",
     "jest": "~24.8.0",
-    "rimraf": "~2.6.3"
+    "rimraf": "~2.6.3",
+    "ts-jest": "^24.3.0",
+    "ts-loader": "^6.2.1",
+    "tslib": "^1.10.0",
+    "typescript": "^3.7.5",
+    "webpack": "^4.41.5",
+    "webpack-cli": "^3.3.10",
+    "webpack-node-externals": "^1.7.2"
   }
 }
