--- a/.editorconfig
+++ b/.editorconfig
@@ -2,11 +2,20 @@
 root = true
 
 [*]
-end_of_line = lf
-indent_style = space
-indent_size = 4
 charset = utf-8
-insert_final_newline = true
-
-[*.json]
+indent_style = space
 indent_size = 2
+insert_final_newline = true
+trim_trailing_whitespace = true
+
+[*.md]
+max_line_length = off
+trim_trailing_whitespace = false
+
+[*.ts]
+ij_typescript_spaces_within_imports = true
+ij_typescript_use_double_quotes = false
+ij_typescript_force_quote_style = true
+ij_typescript_import_sort_members = true
+ij_typescript_import_sort_module_name = true
+ij_typescript_spaces_within_object_literal_braces = true
