feature: Stop supporting of Node.js < 12 Specify required version of Node.js in package.json Change ECMAScript target version in tsconfig.json
https://github.com/pakhuta/gzip-cli/issues/17

--- a/package.json
+++ b/package.json
@@ -34,6 +34,9 @@
     "url": "https://github.com/pakhuta/gzip-cli/issues"
   },
   "homepage": "https://github.com/pakhuta/gzip-cli#readme",
+  "engines": {
+    "node" : ">=0.12.10"
+  },
   "dependencies": {
     "glob": "^7.1.6",
     "glob-parent": "^5.1.0",
