dependencies: Update dependencies Update all dependencies
https://github.com/pakhuta/gzip-cli/issues/15

--- a/package.json
+++ b/package.json
@@ -35,37 +35,37 @@
   },
   "homepage": "https://github.com/pakhuta/gzip-cli#readme",
   "engines": {
-    "node" : ">=0.12.10"
+    "node": ">=0.12.10"
   },
   "dependencies": {
     "glob": "^7.1.6",
-    "glob-parent": "^5.1.0",
+    "glob-parent": "^5.1.1",
     "minimist": "^1.2.5"
   },
   "devDependencies": {
-    "@types/glob": "^7.1.1",
+    "@types/glob": "^7.1.3",
     "@types/glob-parent": "^5.1.0",
-    "@types/jest": "^25.2.1",
-    "@types/minimist": "^1.2.0",
-    "@types/rimraf": "^2.0.3",
-    "@typescript-eslint/eslint-plugin": "^2.17.0",
-    "@typescript-eslint/parser": "^2.17.0",
+    "@types/jest": "^26.0.15",
+    "@types/minimist": "^1.2.1",
+    "@types/rimraf": "^3.0.0",
+    "@typescript-eslint/eslint-plugin": "^4.8.2",
+    "@typescript-eslint/parser": "^4.8.2",
     "copy-webpack-plugin": "^5.1.1",
-    "coveralls": "~3.0.5",
-    "eslint": "^6.8.0",
-    "eslint-config-standard": "^14.1.0",
-    "eslint-plugin-import": "^2.20.0",
-    "eslint-plugin-node": "^11.0.0",
+    "coveralls": "^3.1.0",
+    "eslint": "^7.14.0",
+    "eslint-config-standard": "^16.0.2",
+    "eslint-plugin-import": "^2.22.1",
+    "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^4.2.1",
-    "eslint-plugin-standard": "^4.0.1",
-    "jest": "^25.4.0",
-    "rimraf": "~2.6.3",
-    "ts-jest": "^25.4.0",
-    "ts-loader": "^6.2.1",
-    "tslib": "^1.10.0",
-    "typescript": "^3.7.5",
-    "webpack": "^4.43.0",
-    "webpack-cli": "^3.3.11",
-    "webpack-node-externals": "^1.7.2"
+    "eslint-plugin-standard": "^5.0.0",
+    "jest": "^26.6.3",
+    "rimraf": "^3.0.2",
+    "ts-jest": "^26.4.4",
+    "ts-loader": "^8.0.11",
+    "tslib": "^2.0.3",
+    "typescript": "^4.1.2",
+    "webpack": "^4.44.2",
+    "webpack-cli": "^3.3.12",
+    "webpack-node-externals": "^2.5.2"
   }
 }
