--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "gzip-cli",
-  "version": "1.2.0-beta.0",
+  "version": "1.2.0",
   "description": "gzip-cli provides CLI for compressing files by using compress algorithms such as Gzip and Brotli",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
